--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "cordova-sqlite-react",
   "author": "SinGlEBW",
-  "version": "1.1.39",
+  "version": "1.1.40",
   "description": "",
   "main": "./dist/index.js",
   "types": "./dist/@types/index.d.ts",
  
  
   "scripts": {
-    "tsc": "rm -rf ./dist/* && tsc && cp ./src/common.d.ts ./dist/@types/"
+    "tsc": "rm -rf ./dist/* && tsc && cp ./src/common.d.ts ./dist/@types/ && git add . && git ct -m update && git push && npm publish"
   },
   "devDependencies": {
     "@types/node": "^17.0.10"
