--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
  "name": "cordova-sqlite-react",
  "author": "SinGlEBW",
- "version": "1.1.42",
+ "version": "1.1.43",
  "description": "",
  "main": "./dist/index.js",
  "types": "./dist/@types/index.d.ts",
@@ -12,6 +12,10 @@
   "@types/node": "^17.0.10"
  },
  "license": "ISC",
+ "repository": {
+  "type": "git",
+  "url": "https://github.com/SinGlEBW/cordova-sqlite-react"
+ },
  "dependencies": {
   "tsc": "^2.0.4",
   "typescript": "^4.5.4",
